# Handover

./: README.md
lop2/: README.md  TODO.md  lop2.Dockerfile  start-container.sh
lop2/lop2/: package.xml  setup.py
lop2/lop2/config/: bag_config.rviz  comparison.rviz
lop2/lop2/data/: realsense-config.yaml
lop2/lop2/launch/: lop.launch.py  main.launch.py  run.launch.py  simple.launch.py
lop2/lop2/lop2/: live_feed.py  lop_node.py  one_euro_filter.py  pose.py  rqt_test.py
lop2/lop2_interfaces/: CMakeLists.txt  package.xml
lop2/lop2_interfaces/msg/: Pose2D.msg  Pose2DArray.msg  Pose3D.msg  Pose3DArray.msg
nuitrack_pointcloud/: CMakeLists.txt  package.xml
nuitrack_pointcloud/launch/: nuitrack.launch.py
nuitrack_pointcloud/src/: nuitrack_skeleton_pointcloud.cpp  nuitrack_skeleton_pointcloud_1.cpp  nuitrack_skeleton_pointcloud_2.cpp
pointcloud_processing/: CMakeLists.txt  README.md  package.xml
pointcloud_processing/src/: get_transform_Matrix.cpp  handover_T_inhand_detector.cpp  handover_grasping_detector.cpp  jointPosition_transformer.cpp  pointcloud_transformer.cpp  robot_self_filter.cpp
pointcloud_processing_nuitrack/: CMakeLists.txt  package.xml
pointcloud_processing_nuitrack/src/: handover_T_inhand_detector.cpp  jointPosition_transformer.cpp  pointcloud_transformer.cpp
robot_control_part/: CMakeLists.txt  package.xml
robot_control_part/launch/: collsion_objects.launch.py  handover_statemachine.launch.py  pickplace_test.launch.py  robot_jointsPosition.launch.py  ssm.launch.py
robot_control_part/src/: collision_avoidance_robot.cpp  collision_objects.cpp  handover_statemachine.cpp  min_distance.cpp  pickplace_test.cpp  robot_jointsPosition.cpp
